<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkbox_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintVertical_bias="1"
                android:button="@drawable/custom_selector"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintBottom_toBottomOf="@+id/img_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="@string/aquaman"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/img_format_tv"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_detail" />

            <ImageView
                android:id="@+id/img_format_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_tvformat"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1" />

            <Button
                android:id="@+id/btn_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/corners_button"
                android:paddingHorizontal="26dp"
                android:text="@string/watch"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/movie_rating"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressBackgroundTint="@color/colorControlNormal"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="@id/btn_watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_watch"
                tools:rating="5" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/description"
                android:textColor="#707070"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_watch" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_normal"
                android:layout_marginHorizontal="8dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:ignore="RtlSymmetry"
                tools:itemCount="4"
                tools:listitem="@layout/item_actor"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_title_studio"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/studio"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/items_container" />

            <TextView
                android:id="@+id/tv_studio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="Warner Bros."
                android:layout_marginStart="16dp"
                android:textAllCaps="false"
                android:textColor="#707070"
                app:layout_constraintStart_toEndOf="@id/tv_title_studio"
                app:layout_constraintTop_toTopOf="@id/tv_title_studio"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_studio" />

            <TextView
                android:id="@+id/tv_title_genre"
                app:layout_constraintTop_toBottomOf="@id/tv_studio"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/genre"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                android:textColor="#707070"
                android:text="Action, Adventure, Fantasy "
                app:layout_constraintStart_toStartOf="@id/tv_studio"
                app:layout_constraintTop_toBottomOf="@+id/tv_studio" />

            <TextView
                android:id="@+id/tv_title_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_genre" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2021"
                android:layout_marginTop="8dp"
                android:textColor="#707070"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="@id/tv_genre"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>